--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 *{
     font-family: 'Roboto', sans-serif;
-    background-color: #05E7Fa;
+    background-color: #aff7fd;
 
 }
 
@@ -15,7 +15,7 @@ h1{
 }
 
 button{
-    width: 200px;
+    width: 150px;
     font-size: 1.2rem;
     border-radius: 10px;
 }
@@ -45,4 +45,8 @@ button:hover{
 
 input{
     background-color: white;
+}
+
+#game-container{
+    border: 1px solid black;
 }
