--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,9 @@
 *{
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Quicksand', sans-serif;
     background-color: #aff7fd;
 
 }
+
 
 h1{
     text-align: center;
